--- a/home.html
+++ b/home.html
@@ -31,7 +31,13 @@ Makanan Favorit
 <td>
 Minuman Favorit
 </td>
-</tr>
+<td>
+    Olahraga favorit
+    </td>
+<td>
+  aktifitas hobi favorit
+  </td>
+  </tr>
 <tr>
 <td>
 1
@@ -57,4 +63,10 @@ Nasi goreng
 <td>
 Air putih
 </td>
+  <td>
+    Basket
+  </td>
+<td>
+  Fate/Grand Order
+  </td>
 </tr>
